{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 301,
  "lineage": "a8a2e919-981a-d1aa-9807-d5de80666520",
  "resources": [
    {
      "module": "module.app-asg",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830706273526:loadbalancer/app/govtech-assignment-alb/96ed62f7cf75a980",
            "arn_suffix": "app/govtech-assignment-alb/96ed62f7cf75a980",
            "desync_mitigation_mode": "defensive",
            "dns_name": "govtech-assignment-alb-965094442.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830706273526:loadbalancer/app/govtech-assignment-alb/96ed62f7cf75a980",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "govtech-assignment-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c910e80e5a956f91"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ab6a879296e4ba8"
              },
              {
                "subnet_id": "subnet-0c94d98a8ea3d3a7a"
              }
            ],
            "subnets": [
              "subnet-02ab6a879296e4ba8",
              "subnet-0c94d98a8ea3d3a7a"
            ],
            "vpc_id": "vpc-094eb36ecb3861fa1",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.app-asg.aws_security_group.alb-sg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-asg",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830706273526:listener/app/govtech-assignment-alb/96ed62f7cf75a980/0e6188ca39fa279e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830706273526:targetgroup/govtech-assignment-alb-tg/dd02578068f4eb23",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830706273526:listener/app/govtech-assignment-alb/96ed62f7cf75a980/0e6188ca39fa279e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830706273526:loadbalancer/app/govtech-assignment-alb/96ed62f7cf75a980",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-asg.aws_lb.alb",
            "module.app-asg.aws_lb_target_group.alb-tg",
            "module.app-asg.aws_security_group.alb-sg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-asg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830706273526:targetgroup/govtech-assignment-alb-tg/dd02578068f4eb23",
            "arn_suffix": "targetgroup/govtech-assignment-alb-tg/dd02578068f4eb23",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830706273526:targetgroup/govtech-assignment-alb-tg/dd02578068f4eb23",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "govtech-assignment-alb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:security-group/sg-0c910e80e5a956f91",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c910e80e5a956f91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "govtech-assignment-alb-sg",
            "name_prefix": "",
            "owner_id": "830706273526",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app-asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:security-group/sg-09e1d746579ff455b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e1d746579ff455b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "govtech-assignment-instance",
            "name_prefix": "",
            "owner_id": "830706273526",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ee763250491e04a",
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:instance/i-01f959594022f2aed",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f959594022f2aed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gt_kp1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02a600e49f76b4eaf",
            "private_dns": "ip-20-0-2-59.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.2.59",
            "public_dns": "ec2-18-143-102-86.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.143.102.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de38e73bfd4ff016",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0c94d98a8ea3d3a7a",
            "tags": {
              "Name": "bastion-server"
            },
            "tags_all": {
              "Name": "bastion-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-035212f39962ffab9"
            ]
          },
          "dependencies": [
            "module.bastion-server.aws_security_group.instance",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:security-group/sg-035212f39962ffab9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035212f39962ffab9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "govtech-bastion-instance",
            "name_prefix": "",
            "owner_id": "830706273526",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0999c4d5bb75f6010",
            "association_id": "eipassoc-0edb6e6c67de0f8b0",
            "domain": "vpc",
            "id": "eipalloc-0999c4d5bb75f6010",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04251bec1078099df",
            "private_dns": "ip-20-0-2-175.ap-southeast-1.compute.internal",
            "private_ip": "20.0.2.175",
            "public_dns": "ec2-54-151-193-168.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.193.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:internet-gateway/igw-03c227e2bdbbf3e89",
            "id": "igw-03c227e2bdbbf3e89",
            "owner_id": "830706273526",
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-igw"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-igw"
            },
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0999c4d5bb75f6010",
            "connectivity_type": "public",
            "id": "nat-0dfd75525a4ace874",
            "network_interface_id": "eni-04251bec1078099df",
            "private_ip": "20.0.2.175",
            "public_ip": "54.151.193.168",
            "subnet_id": "subnet-0c94d98a8ea3d3a7a",
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "nat"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dc9a61a2e40e7f331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dfd75525a4ace874",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dc9a61a2e40e7f33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03c227e2bdbbf3e89",
            "id": "r-rtb-0f36412961779d21e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f36412961779d21e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:route-table/rtb-0dc9a61a2e40e7f33",
            "id": "rtb-0dc9a61a2e40e7f33",
            "owner_id": "830706273526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dfd75525a4ace874",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-private-route-table"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:route-table/rtb-0f36412961779d21e",
            "id": "rtb-0f36412961779d21e",
            "owner_id": "830706273526",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c227e2bdbbf3e89",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-public-route-table"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c955cff40ba9aa4",
            "route_table_id": "rtb-0dc9a61a2e40e7f33",
            "subnet_id": "subnet-0c58c9164623c9868"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f24d76226b974e7d",
            "route_table_id": "rtb-0dc9a61a2e40e7f33",
            "subnet_id": "subnet-0c9c80e72f6ea5edf"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd2a9763bead2973",
            "route_table_id": "rtb-0dc9a61a2e40e7f33",
            "subnet_id": "subnet-05758d30d3a168515"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028612de68b4b9165",
            "route_table_id": "rtb-0dc9a61a2e40e7f33",
            "subnet_id": "subnet-0cd0dfb578897a345"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a37488216d5b05b6",
            "route_table_id": "rtb-0f36412961779d21e",
            "subnet_id": "subnet-0c94d98a8ea3d3a7a"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edfb56a36a51951e",
            "route_table_id": "rtb-0f36412961779d21e",
            "subnet_id": "subnet-02ab6a879296e4ba8"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:security-group/sg-0de7662c62b7be69a",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0de7662c62b7be69a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "interview-govtech-assignment-env-default-sg",
            "name_prefix": "",
            "owner_id": "830706273526",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "interview-govtech-assignment-env"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:subnet/subnet-0c58c9164623c9868",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "20.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c58c9164623c9868",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830706273526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1a-private-subnet"
            },
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:subnet/subnet-0c9c80e72f6ea5edf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "20.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9c80e72f6ea5edf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830706273526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1b-private-subnet"
            },
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:subnet/subnet-05758d30d3a168515",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "20.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05758d30d3a168515",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830706273526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1c-private-subnet"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1c-private-subnet"
            },
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:subnet/subnet-0cd0dfb578897a345",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "20.0.23.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd0dfb578897a345",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830706273526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1a-private-subnet"
            },
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:subnet/subnet-0c94d98a8ea3d3a7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c94d98a8ea3d3a7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "830706273526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1a-public-subnet"
            },
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:subnet/subnet-02ab6a879296e4ba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "20.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ab6a879296e4ba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "830706273526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1b-public-subnet"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-ap-southeast-1b-public-subnet"
            },
            "vpc_id": "vpc-094eb36ecb3861fa1"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830706273526:vpc/vpc-094eb36ecb3861fa1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-01eafabc482124a9f",
            "default_route_table_id": "rtb-080f231c7e37a2cab",
            "default_security_group_id": "sg-042ede6b340f92c11",
            "dhcp_options_id": "dopt-959f2bf2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-094eb36ecb3861fa1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080f231c7e37a2cab",
            "owner_id": "830706273526",
            "tags": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-vpc"
            },
            "tags_all": {
              "Environment": "interview-govtech-assignment-env",
              "Name": "interview-govtech-assignment-env-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}